<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mayaswell.fyberapi.MainActivity">

<!-- todo xxx would like the edit texts edges aligned left under each other but throws out the width of the enclosing layout -->
    <RelativeLayout
        android:id="@+id/mainForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/main_margin_v"
        android:layout_centerInParent="true"
        android:background="@drawable/main_form_background"
        android:padding="@dimen/mainFormPadding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="something bad happened"
            android:id="@+id/errorView"
            android:layout_marginBottom="@dimen/input_margin_v"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            style="@style/ErrorText"
            android:singleLine="false"
            android:clickable="false"
            android:textIsSelectable="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_uid"
            android:layout_marginRight="@dimen/main_input_item_gap_h"
            android:id="@+id/lbl1"
            style="@style/LabelText"
            android:layout_alignBottom="@+id/textin1"
            android:layout_below="@+id/errorView"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_api"
            android:id="@+id/lbl2"
            android:layout_marginRight="@dimen/main_input_item_gap_h"
            android:layout_marginTop="@dimen/input_margin_v"
            android:layout_below="@id/lbl1"
            style="@style/LabelText"
            android:singleLine="false"
            android:layout_alignBottom="@+id/textin2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_appid"
            android:id="@+id/lbl3"
            android:layout_marginRight="@dimen/main_input_item_gap_h"
            android:layout_marginTop="@dimen/input_margin_v"
            android:layout_below="@id/lbl2"
            style="@style/LabelText"
            android:layout_alignBottom="@+id/textin3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_pub0"
            android:id="@+id/lbl4"
            android:layout_marginRight="@dimen/main_input_item_gap_h"
            android:layout_marginTop="@dimen/input_margin_v"
            android:layout_below="@id/lbl3"
            style="@style/LabelText"
            android:layout_alignBottom="@+id/textin4"/>

        <EditText
            android:layout_width="@dimen/main_input_width"
            android:layout_height="wrap_content"
            android:id="@+id/textin1"
            android:layout_toRightOf="@id/lbl1"
            android:text="@string/default_uid_input_value"
            style="@style/InputText"
            android:layout_below="@+id/errorView"/>
        <EditText
            android:layout_width="@dimen/main_input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_v"
            android:id="@+id/textin2"
            android:layout_below="@id/textin1"
            android:layout_toRightOf="@id/lbl2"
            android:text="@string/default_input_api_value"
            style="@style/InputText"
            />
        <EditText
            android:layout_width="@dimen/main_input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_v"
            android:id="@+id/textin3"
            android:layout_below="@id/textin2"
            android:layout_toRightOf="@id/lbl3"
            android:text="@string/default_input_uid_value"
            style="@style/InputText"
            />
        <EditText
            android:layout_width="@dimen/main_input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_v"
            android:id="@+id/textin4"
            android:layout_below="@id/textin3"
            android:layout_toRightOf="@id/lbl4"
            android:text="@string/default_input_pubb0_value"
            style="@style/InputText"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_find_offers"
            android:id="@+id/goButton"
            android:background="@drawable/go_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/input_margin_v"
            android:layout_below="@+id/textin4"/>
    </RelativeLayout>

</RelativeLayout>
